# ARwall

./: ARwall.guide.docx  README.md  build.gradle  import-summary.txt  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/arwall/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: back.fsh  back.vsh  picture.fsh  picture.vsh
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jniCalls/: MainActivity.cpp  cameraClass.cpp  gestureClass.cpp  myGLRenderer.cpp  sensorClass.cpp
app/src/main/cpp/nativeCode/common/: backTexture.cpp  backTexture.h  misc.cpp  misc.h  myGLCamera.cpp  myGLCamera.h  myGLFunctions.cpp  myGLFunctions.h  myGLM.h  myJNIHelper.h  myLogger.h  myShader.cpp  textPicture.cpp  textPicture.h
app/src/main/cpp/nativeCode/simpleARClass/: simpleARClass.cpp  simpleARClass.h
app/src/main/java/com/example/arwall/: CameraClass.java  GestureClass.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  SensorClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/arwall/: ExampleUnitTest.java
common/ndkHelperBin/Debug/x86/: cmake_install.cmake
common/ndkHelperBin/Release/arm64-v8a/: cmake_install.cmake
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
